<resources>
    <string name="app_name">Metzy</string>
    <string name="log_in_to_continue">Log in To Continue</string>
    <string name="email_address">Email Address *</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="password">Password *</string>
    <string name="your_password">Your Password</string>
    <string name="login">Login</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name *</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="age">Age *</string>
    <string name="your_age">Your Age</string>
    <string name="phone_number">Phone Number *</string>
    <string name="create_password">Create Password</string>
    <string name="create_account">Create Account</string>
    <string name="user_information">User Information</string>
    <string name="update_info">Update Info</string>
    <string name="log_out">Log Out</string>
</resources>