<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:fontFamily="@font/raleway_black"
        android:textColor="@color/text_color"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/text_color"
        android:layout_below="@+id/loginLabel"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/nameLabel"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="15sp"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/text_color"
        android:layout_below="@+id/nameEditText"
        android:layout_marginTop="21dp"/>

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/ageLabel"
        android:background="@drawable/edit_text_background"
        android:hint="@string/your_age"
        android:inputType="number"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="15sp"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/text_color"
        android:layout_below="@+id/ageEditText"
        android:layout_marginTop="21dp"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/phoneLabel"
        android:background="@drawable/edit_text_background"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/text_color"
        android:maxLength="10"/>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:fontFamily="@font/raleway_bold"
        android:layout_below="@+id/phoneEditText"
        android:layout_marginTop="21dp"
        android:textSize="15sp"
        android:textColor="@color/text_color"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLabel"
        android:layout_marginTop="7dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/your_email_address"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/raleway_bold"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="21dp"
        android:textSize="15sp"
        android:textColor="@color/text_color"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLabel"
        android:layout_marginTop="7dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/text_color"/>

    <Button
        android:id="@+id/createAc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="31dp"
        android:background="@drawable/login_bg"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:fontFamily="@font/raleway_medium"
        android:textSize="17sp"
        android:textColor="@color/white"/>

</RelativeLayout>